[metadata]
name = broote
version = 0.2.0
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = General purpose python bruteforce library built on top of perock
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/broote
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/broote/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    security
    bruteforce
    hacking
    testing

[options]
packages = find:
install_requires =
    forcetable>=0.0.4, <0.1.0
    perock>=0.1.0, <0.2.0

python_requires = >=3.6

[options.packages.find]
exclude =
    tests
